<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/login_back"
    tools:context=".RequestForBlood">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_for_blood"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/tvRShowBlood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="arial"
                android:textSize="20sp"
                />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Blood Group"
                android:textSize="25sp"
                android:fontFamily="arial"
                android:textStyle="bold"
                android:gravity="center"/>
            <RadioGroup
                android:id="@+id/rrgBlood"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <RadioButton
                    android:id="@+id/rrbA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_opacity_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestBloodSelected"
                    />
                <RadioButton
                    android:id="@+id/rrbB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_opacity_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestBloodSelected"
                    />
                <RadioButton
                    android:id="@+id/rrbO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_opacity_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestBloodSelected"
                    />
                <RadioButton
                    android:id="@+id/rrbAB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_opacity_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestBloodSelected"
                    tools:ignore="OnClick" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="A"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="B"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="O"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="AB"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Blood Factor"
                android:textSize="25sp"
                android:fontFamily="arial"
                android:textStyle="bold"
                android:gravity="center"/>

            <RadioGroup
                android:id="@+id/rrgFactor"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                >
                <RadioButton
                    android:id="@+id/rrbPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_add_circle_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestFactorSelected"
                    />
                <RadioButton
                    android:id="@+id/rrbMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_remove_circle_black_48dp"
                    android:button="@null"
                    android:onClick="onRequestFactorSelected"
                    />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Gender"
            android:textSize="25sp"
            android:fontFamily="arial"
            android:textStyle="bold"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/rrgGender"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            >
            <RadioButton
                android:id="@+id/rrbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Male"
                android:textSize="25sp"
                android:onClick="onRequestGenderSelected"
                />
            <RadioButton
                android:id="@+id/rrbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Female"
                android:textSize="25sp"
                android:onClick="onRequestGenderSelected"
                />
        </RadioGroup>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Amount of Bag(Blood)"
            android:textSize="25sp"
            android:fontFamily="arial"
            android:textStyle="bold"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/rrgBag"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            >
            <RadioButton
                android:id="@+id/rrbOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="1"
                android:textSize="25sp"
                android:onClick="onRequestBagSelected"
                />
            <RadioButton
                android:id="@+id/rrbTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="2"
                android:textSize="25sp"
                android:onClick="onRequestBagSelected"
                />
            <RadioButton
                android:id="@+id/rrbThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="3"
                android:textSize="25sp"
                android:onClick="onRequestBagSelected"
                />
            <RadioButton
                android:id="@+id/rrbFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="4"
                android:textSize="25sp"
                android:onClick="onRequestBagSelected"
                />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_of_the_hospital"
            app:helperTextEnabled="true"
            app:helperText="@string/place_to_donate_blood"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_to_donor"
            app:helperTextEnabled="true"
            app:helperText="@string/reason_for_asking"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/dark"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/requestBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:background="@drawable/btn_login"
            android:text="@string/request"
            android:textSize="20sp"
            />
    </LinearLayout>

</ScrollView>